--- a/src/css/styles/style.css
+++ b/src/css/styles/style.css
@@ -13246,8 +13246,8 @@ a.read_more i {
   width: 60px;
   display: block;
   margin: 0 auto;
-  margin-top: -30px;
-  margin-bottom: 10px;
+  margin-top: -60px;
+  margin-bottom: 30px;
   position: relative;
 }
 
@@ -16714,3 +16714,8 @@ img {
 .no-cursor {
   cursor: not-allowed;
 }
+
+/* move the nav to its proper place */
+.relative .owl-nav .owl-prev { left: -24px; }
+.relative .owl-nav .owl-next { right: -24px; }
+
