used axios to get the dynamic data and dynamically express it

--- a/src/css/styles/style.css
+++ b/src/css/styles/style.css
@@ -16863,4 +16863,8 @@ img {
 #section-items .slick-next{ right: 2px; }
 #section-collections .slick-next { right: -10px; }
 
+#section-popular .lazy pp-author{
+  
+}
+
 
