--- a/src/css/styles/style.css
+++ b/src/css/styles/style.css
@@ -16652,10 +16652,29 @@ img {
 
 .skeleton-box {
   display: inline-block;
-  height: 1em;
   position: relative;
   overflow: hidden;
   background-color: #dddbdd;
+}
+
+.sk-avatar { 
+  width: 44px; 
+  height: 44px; 
+  border-radius: 50%; 
+  display: block; 
+}
+
+.sk-line { 
+  height: 12px; 
+  border-radius: 6px; 
+  display: block; 
+}
+
+.sk-title { 
+  width: 140px; 
+}
+.sk-sub { 
+  width: 80px; 
 }
 
 .skeleton-box::after {
@@ -16676,6 +16695,7 @@ img {
   animation: shimmer 2s infinite;
   content: "";
 }
+
 @-webkit-keyframes shimmer {
   100% {
     transform: translateX(100%);
