--- a/src/css/styles/style.css
+++ b/src/css/styles/style.css
@@ -13571,7 +13571,7 @@ a.read_more i {
   -webkit-border-radius: 3px;
 }
 
-.item_info_counts > div i {
+.item_info_counts > div i{
   margin-right: 5px;
   color: rgba(0, 0, 0, 0.5);
 }
@@ -17052,19 +17052,6 @@ img {
   right: -10px;
 }
 
-/* special css design for the item details Author abd Creator */
-/* .author__list_pp {
-  position: absolute;
-  top: 12px;
-  left: 12px;
-  z-index: 3;
-  display: flex;
-  align-items: center;
-  gap: 8px;
-  width: 50px;
-  height: auto;
-} */
-
 
 /* shimmer */
 .ske-img.ske-shimmer::after {
@@ -17085,3 +17072,39 @@ img {
     transform: translateX(100%);
   }
 }
+
+.itemdetails-skeleton .fte-ske .ske-media { 
+  width: 100%; 
+  min-height: 640px; 
+  border-radius: 0;
+}
+
+.itemdetails-skeleton .header-ske .title-bar{
+  width: 70%;
+  height: 50px;
+  border-radius: 0;
+}
+
+.ske-chip{
+  width: 80px;
+  height: 30px;
+}
+
+.message-block{
+  width: 540px;
+  height: 50px;
+  border-radius: 0;
+}
+
+.ske-line{
+  width: 30%;
+  height: 40px;
+  margin-left: 20px;
+}
+
+.ske-icon{
+  width: 24px;
+ 
+}
+
+
